@@ -20,9 +20,6 @@ import com.mongodb.client.MongoCollection;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
@@ -36,7 +33,7 @@ import static com.mongodb.client.model.Updates.setOnInsert;
 public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
     @Override
-    public ObjectId register(User user) throws DAOException {
+    public String register(User user) throws DAOException {
         try (MongoClient mongoClient = getConnection()) {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
@@ -66,7 +63,7 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
                     throw new DAOException("Error adding new user");
                 }
             } else {
-                return result.getUpsertedId().asObjectId().getValue();
+                return result.getUpsertedId().asObjectId().getValue().toString();
             }
         } catch (DAOException e) {
             throw e;
@@ -87,7 +84,7 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
             }
 
             // Update the document
-            Bson filter = eq("_id", user.getId());
+            Bson filter = eq("_id", new ObjectId(user.getId()));
             Bson update = new Document("$set", RegisteredUserToDocument(user))
                     .append("$unset", UnsetDocument(user));
 
@@ -103,11 +100,11 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
     }
 
     @Override
-    public void remove(ObjectId id) throws DAOException {
+    public void remove(String userId) throws DAOException {
         try (MongoClient mongoClient = getConnection()) {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
-            Bson filter = eq("_id", id);
+            Bson filter = eq("_id", new ObjectId(userId));
 
             users.deleteOne(filter);
         }
@@ -146,23 +143,23 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
     }
 
     @Override
-    public RegisteredUser find(ObjectId id) throws DAOException {
+    public RegisteredUser find(String userId) throws DAOException {
         try (MongoClient mongoClient = getConnection()) {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
-            Bson filter = eq("_id", id);
+            Bson filter = eq("_id", new ObjectId(userId));
             Bson projection = exclude("is_manager", "password");
 
             Document userDocument = users.find(filter).projection(projection).first();
             return (userDocument != null)? documentToRegisteredUser(userDocument) : null;
         }
         catch (Exception e){
-            throw new DAOException("Error searching user by id: "+ id, e);
+            throw new DAOException("Error searching user by id: "+ userId, e);
         }
     }
 
     @Override
-    public List<RegisteredUserDTO> find(String username) throws DAOException {
+    public List<RegisteredUserDTO> search(String username) throws DAOException {
         try (MongoClient mongoClient = getConnection()) {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
@@ -207,7 +204,7 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
     private RegisteredUserDTO documentToRegisteredUserDTO(Document doc) {
         RegisteredUserDTO user = new RegisteredUserDTO();
-        user.setId(doc.getObjectId("_id"));
+        user.setId(doc.getObjectId("_id").toString());
         user.setUsername(doc.getString("username"));
         user.setProfilePicUrl(doc.getString("picture"));
         return user;
@@ -231,7 +228,7 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
             user = regularUser;
         }
 
-        user.setId(doc.getObjectId("_id"));
+        user.setId(doc.getObjectId("_id").toString());
         user.setPassword(doc.getString("password"));
         user.setEmail(doc.getString("email"));
         user.setJoinedDate(ConverterUtils.dateToLocalDate(doc.getDate("joined_on")));
@@ -259,15 +256,29 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
             appendIfNotNull(doc, "birthday", ConverterUtils.localDateToDate(regularUser.getBirthday()));
             appendIfNotNull(doc, "description", regularUser.getDescription());
             appendIfNotNull(doc, "gender", regularUser.getGender() != null ? regularUser.getGender().name() : null);
-            Logger logger = LoggerFactory.getLogger(UserDAOImpl.class);
             appendIfNotNull(doc, "location", regularUser.getLocation());
         }
 
         return doc;
     }
 
+    private Document UnsetDocument(User registeredUser) {
+        Document doc = new Document();
+        if (registeredUser.getFullname() != null && registeredUser.getFullname().equals(Constants.NULL_STRING))
+            doc.append("fullname", 1);
+        if (registeredUser.getBirthday() != null && registeredUser.getBirthday().equals(Constants.NULL_DATE))
+            doc.append("birthday", 1);
+        if (registeredUser.getLocation() != null && registeredUser.getLocation().equals(Constants.NULL_STRING))
+            doc.append("location", 1);
+        if (registeredUser.getDescription() != null && registeredUser.getDescription().equals(Constants.NULL_STRING))
+            doc.append("description", 1);
+        if (registeredUser.getGender() != null && registeredUser.getGender().equals(Gender.UNKNOWN))
+            doc.append("gender", 1);
 
-    //MongoDB queries
+        return doc;
+    }
+
+    //MongoDB complex queries
     //Find the distribution of genders between users
     @Override
     public List<Document> getGenderDistribution() throws DAOException {
@@ -293,21 +304,21 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
     //Find the average age of users
     @Override
-    public int averageAgeUsers() throws DAOException {
+    public Integer averageAgeUsers() throws DAOException {
         try (MongoClient mongoClient = getConnection()) {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
             List<Document> pipeline = new ArrayList<>();
-            pipeline.add(Document.parse("{$project: {age: {$divide: [{ $subtract: [new Date(), \"$birthday\"] },\n" +
-                    "          1000 * 60 * 60 * 24 * 365 ] }}\n"));
+            pipeline.add(Document.parse("""
+                    {$project: {age: {$divide: [{ $subtract: [new Date(), "$birthday"] },
+                              1000 * 60 * 60 * 24 * 365 ] }}
+                    """));
             pipeline.add(Document.parse("{ $group: {_id: null, averageAge: { $avg: \"$age\" }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
-            return result.get(0).getInteger("averageAge");
+            return result.getFirst().getInteger("averageAge");
         }
         catch (Exception e){
             throw new DAOException("Error getting average age of users", e);
@@ -322,12 +333,10 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
             List<Document> pipeline = new ArrayList<>();
             pipeline.add(Document.parse("{$group: {_id: \"$location\", count: { $sum: 1 }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
             return result;
         }
         catch (Exception e){
@@ -342,22 +351,21 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
             MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
             List<Document> pipeline = new ArrayList<>();
-            pipeline.add(Document.parse("{$project: {age: {$divide: [{ $subtract: [new Date(), \"$birthday\"] },\n" +
-                    "          1000 * 60 * 60 * 24 * 365 ] }}\n"));
+            pipeline.add(Document.parse("""
+                    {$project: {age: {$divide: [{ $subtract: [new Date(), "$birthday"] },
+                              1000 * 60 * 60 * 24 * 365 ] }}
+                    """));
             pipeline.add(Document.parse("{$bucket: {groupBy: \"$age\", boundaries: [13, 20, 40, 50], default: \"Other\", output: { count: { $sum: 1 } }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
             return result;
         }
         catch (Exception e){
             throw new DAOException("Error getting users by age range", e);
         }
     }
-
 
     //Find how many users registered for each year
     @Override
@@ -367,12 +375,10 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
             List<Document> pipeline = new ArrayList<>();
             pipeline.add(Document.parse("{ $group: { _id: { $year: { $toDate: \"$joined_on\" } }, count: { $sum: 1 } } }"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
             return result;
         } catch (Exception e) {
             throw new DAOException("Error getting users registered by year", e);
@@ -381,21 +387,19 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
     //Find average app_rating based on the age of users
     @Override
-    public int averageAppRatingByAge (int yearOfBirth) throws DAOException{
-        try (MongoClient monngoClient = getConnection()) {
-            MongoCollection<Document> users = monngoClient.getDatabase("mangaVerse").getCollection("users");
+    public Integer averageAppRatingByAge (Integer yearOfBirth) throws DAOException{
+        try (MongoClient mongoClient = getConnection()) {
+            MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
             List<Document> pipeline = new ArrayList<>();
             pipeline.add(Document.parse("{$match: {\"birthday\": { $gte: ISODate(\"" + yearOfBirth + "-01-01T00:00:00.000Z\"),        " +
                     "$lt: ISODate(\"" + (yearOfBirth+1) + "-01-01T00:00:00.000Z\")}}}"));
             pipeline.add(Document.parse("{$group: {_id: null, averageAppRating: { $avg: \"$app_rating\" }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
-            return result.get(0).getInteger("averageAppRating");
+            return result.getFirst().getInteger("averageAppRating");
         }
         catch (Exception e){
             throw new DAOException("Error getting average app rating by age", e);
@@ -404,20 +408,18 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
     }
     //Find average app_rating based on the location of users
     @Override
-    public int averageAppRatingByLocation (String location) throws DAOException{
-        try (MongoClient monngoClient = getConnection()) {
-            MongoCollection<Document> users = monngoClient.getDatabase("mangaVerse").getCollection("users");
+    public Integer averageAppRatingByLocation (String location) throws DAOException{
+        try (MongoClient mongoClient = getConnection()) {
+            MongoCollection<Document> users = mongoClient.getDatabase("mangaVerse").getCollection("users");
 
             List<Document> pipeline = new ArrayList<>();
             pipeline.add(Document.parse("{$match: { \"location\": \"" + location + "    }  }"));
             pipeline.add(Document.parse("{$group: {_id: null, averageAppRating: { $avg: \"$app_rating\" }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
-            return result.get(0).getInteger("averageAppRating");
+            return result.getFirst().getInteger("averageAppRating");
         }
         catch (Exception e){
             throw new DAOException("Error getting average app rating by age", e);
@@ -432,67 +434,40 @@ public class UserDAOImpl extends BaseMongoDBDAO implements UserDAO {
 
             List<Document> pipeline = new ArrayList<>();
             pipeline.add(Document.parse("{$group: {_id: \"$gender\", averageAppRating: { $avg: \"$app_rating\" }}}"));
-
             AggregateIterable<Document> aggregationResult = users.aggregate(pipeline);
 
             List<Document> result = new ArrayList<>();
             aggregationResult.into(result);
-
             return result;
-
-
         }
         catch (Exception e){
             throw new DAOException("Error getting genre distribution", e);
         }
     }
 
+    // Methods available only in Neo4J
     @Override
-    public void createUserNode(String id, String username, String picture) throws DAOException {
-
+    public void createNode(RegisteredUserDTO registeredUserDTO) throws DAOException {
     }
-
     @Override
-    public void followUser(String followerUserId, String followingUserId) throws DAOException {
-
+    public void follow(String followerUserId, String followingUserId) throws DAOException {
     }
-
     @Override
-    public void unfollowUser(String followerUserId, String followingUserId) throws DAOException {
-
+    public void unfollow(String followerUserId, String followingUserId) throws DAOException {
     }
-
     @Override
     public List<RegisteredUserDTO> getFollowing(String userId) throws DAOException {
         return null;
     }
-
     @Override
     public List<RegisteredUserDTO> getFollowers(String userId) throws DAOException {
         return null;
     }
-
     @Override
     public List<RegisteredUserDTO> suggestUsers(String userId) throws DAOException {
         return null;
     }
-
-
-
-    private Document UnsetDocument(User registeredUser) {
-        Document doc = new Document();
-        if (registeredUser.getFullname() != null && registeredUser.getFullname().equals(Constants.NULL_STRING))
-            doc.append("fullname", 1);
-        if (registeredUser.getBirthday() != null && registeredUser.getBirthday().equals(Constants.NULL_DATE))
-            doc.append("birthday", 1);
-        if (registeredUser.getLocation() != null && registeredUser.getLocation().equals(Constants.NULL_STRING))
-            doc.append("location", 1);
-        if (registeredUser.getDescription() != null && registeredUser.getDescription().equals(Constants.NULL_STRING))
-            doc.append("description", 1);
-        if (registeredUser.getGender() != null && registeredUser.getGender().equals(Gender.UNKNOWN))
-            doc.append("gender", 1);
-
-        return doc;
+    @Override
+    public void update(RegisteredUser user) throws DAOException {
     }
-
 }
